adjusting for deployment

--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
             <li class="menu-header"><a class="header"><i class="material-icons">menu</i>EPXY DEMO</a></li>
             <br />
             <li><a class="subheader">MAIN</a></li>
-            <li><a href="index.html" class="waves-effect"><i class="blue-text material-icons">timeline</i>SUMMARY</a></li>
+            <li><a href="summary.html" class="waves-effect"><i class="blue-text material-icons">timeline</i>SUMMARY</a></li>
             <li><a href="#!" class="waves-effect grey-text lighten-3"><i class="blue-text material-icons">language</i>SERVERS</a></li>
             <li><a href="#!" class="waves-effect grey-text lighten-3"><i class="blue-text material-icons">wifi_tethering</i>NETWORK</a></li>
             <li><a href="#!" class="waves-effect grey-text lighten-3"><i class="blue-text material-icons">star_border</i>TASKS</a></li>
