--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>EPXY Code Challenge</title>
+    <title>EPLEX Code Challenge</title>
     <!-- TODO: add Favicon -->
     <!-- <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' /> -->
 
@@ -13,11 +13,30 @@
 </head>
 
 <body>
+  <!-- <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+      </ul>
+    </div>
+  </nav> -->
+
+
     <!-- Start Side Nav -->
     <aside>
         <ul id="slide-out" class="side-nav">
-            <!-- TODO: Update Header -->
-            <li class="menu-header"><a class="header"><i class="material-icons">menu</i>EPXY DEMO</a></li>
+            <li class="menu-header"><a class="header"><i class="material-icons">menu</i>EPLEX DEMO</a></li>
             <br />
             <li><a class="subheader">MAIN</a></li>
             <li><a href="summary.html" class="waves-effect"><i class="blue-text material-icons">timeline</i>SUMMARY</a></li>
@@ -42,7 +61,7 @@
     </aside>
 
     <!-- Menu Activation Button -->
-    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+    <a href="#" data-activates="slide-out" class="btn button-collapse menu-btn blue"><i class="small material-icons left">menu</i><span class="hide-on-med-and-down">EXPL DEMO</span></a>
     <!-- End Side Nav -->
     <div class="container">
         <header>
