--- a/summary.html
+++ b/summary.html
@@ -41,7 +41,7 @@
     </aside>
 
     <!-- Menu Activation Button -->
-    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+    <a href="#" data-activates="slide-out" class="btn button-collapse menu-btn blue"><i class="small material-icons left">menu</i><span class="hide-on-med-and-down">EXPL DEMO</span></a>
     <!-- End Side Nav -->
     <div class="container">
         <header>
