--- a/summary.html
+++ b/summary.html
@@ -45,44 +45,32 @@
     <!-- End Side Nav -->
     <div class="container">
         <header>
-            <h3><i class="small blue-text material-icons">language</i>Summary</h3></header>
+            <h3><i class="small blue-text material-icons">language</i>Summary</h3>
+        </header>
         <hr>
-        <div class="row">
-          <div class="col s12">
-            Provider Name
+        <main id="main">
+          <div id="no-plan">
+            <div class="row">
+              <div class="col s12">
+                <div class="card darken-1">
+                  <div class="card-content">
+                    <span class="card-title">Add a plan!</span>
+                    <p>It looks like you don't have a plan setup yet. Add a plan by hitting the button below.</p>
+                  </div>
+                  <div class="card-action">
+                    <a class="btn blue" href="admin.html">Add a plan</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            Provider Backing
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            Governance
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            Associate Organizations
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            Partner
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            Marketplace
-          </div>
-        </div>
-
+        </main>
     </div>
     <!-- SCRIPT REQUIREMENTS-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="main.js"></script>
+    <script src="summary.js"></script>
 </body>
 
 </html>
