--- a/admin.html
+++ b/admin.html
@@ -41,7 +41,7 @@
     </aside>
 
     <!-- Menu Activation Button -->
-    <a href="#" data-activates="slide-out" class="btn button-collapse menu-btn blue"><i class="small material-icons left">menu</i><span class="hide-on-med-and-down">EXPL DEMO</span></a>
+    <a href="#!" data-activates="slide-out" class="btn button-collapse menu-btn blue"><i class="small material-icons left">menu</i><span class="hide-on-med-and-down">EXPL DEMO</span></a>
     <!-- End Side Nav -->
     <div class="container">
         <header>
@@ -67,11 +67,11 @@
                         <!-- TODO: dynamically adjust selected card based on the option w/in dropdown -->
                     <select id="compute-backing">
                       <option value="" disabled selected>Server Size Backing</option>
-                      <option value="x1">X1</option>
-                      <option value="x2">X2</option>
-                      <option value="x3">X3</option>
-                      <option value="x4">X4</option>
-                      <option value="x5">X5</option>
+                      <option value="X1">X1</option>
+                      <option value="X2">X2</option>
+                      <option value="X3">X3</option>
+                      <option value="X4">X4</option>
+                      <option value="X5">X5</option>
                     </select>
                         <label for="compute-backing">Provider Compute Backing</label>
                     </div>
@@ -223,9 +223,9 @@
                 <div class="input-field col s6">
                     <select id="assoc-org">
                       <option value="" disabled selected>Select an Organization</option>
-                      <option value="1">ABC Corp</option>
-                      <option value="2">DEF Corp</option>
-                      <option value="3">GHI Corp</option>
+                      <option value="ABC Corp">ABC Corp</option>
+                      <option value="DEF Corp">DEF Corp</option>
+                      <option value="GHI Corp">GHI Corp</option>
                     </select>
                     <label for="assoc-org">Associate Organization</label>
                 </div>
@@ -245,9 +245,9 @@
                 <div class="input-field col s6">
                 <select id="partner-compute">
                   <option value="" disabled selected>Select a Partner</option>
-                  <option value="1">Partner 1</option>
-                  <option value="2">Partner 2</option>
-                  <option value="3">Partner 3</option>
+                  <option value="Partner 1">Partner 1</option>
+                  <option value="Partner 2">Partner 2</option>
+                  <option value="Partner 3">Partner 3</option>
                 </select>
                 <label for="partner-compute">Partner Compute Backing</label>
               </div>
@@ -256,9 +256,9 @@
             <div class="input-field col s6">
                 <select id="partner-add-on">
             <option value="" disabled selected>Select Partner Add-On Fee</option>
-            <option value="1">AWS 1</option>
-            <option value="2">AWS 2</option>
-            <option value="3">AWS 3</option>
+            <option value="AWS Fee 1">AWS 1</option>
+            <option value="AWS Fee 2">AWS 2</option>
+            <option value="AWS Fee 3">AWS 3</option>
           </select>
                 <label for="partner-add-on">Select Partner Add-On Fee</label>
               </div>
@@ -325,7 +325,7 @@
     <div class="row">
       <div class="col s12">
         <div class="right">
-          <a href="#!" id="cancel" class="waves-effect waves-light btn grey lighten-2">Cancel</a> <a id="submit" class="waves-effect waves-light btn yellow darken-2 white-text">Submit</a>
+          <a href="summary.html" id="cancel" class="waves-effect waves-light btn grey lighten-2">Cancel</a> <a href="summary.html" id="submit" class="waves-effect waves-light btn yellow darken-2 white-text">Submit</a>
         </div>
       </div>
     </div>
